[package]
name = "math-vectors"
version = "0.1.0"
authors = ["Arthur Abramov <rifttech@protonmail.com>"]
repository = "https://github.com/rifttech/math-vectors.git"
homepage = "https://github.com/rifttech/math-vectors.git"
license = "MIT"
description = "vector algebra library"
documentation = "https://rifttech.github.io/math-vectors/math_vectors/index.html"
[dependencies]
